[tool.poetry]
name = "shitops-author"
version = "0.1.0"
description = ""
authors = ["rwxd <git@rwxd.de>"]
readme = "README.md"
packages = [{include = "shitops_author"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
jinja2 = "^3.1.2"
openai = "^0.27.7"
google-cloud-texttospeech = "^2.14.1"
pydub = "^0.25.1"
pyyaml = "^6.0"
azure-cognitiveservices-speech = "^1.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
