[tool.poetry]
name = "shitops-author"
version = "0.1.0"
description = ""
authors = ["rwxd <git@rwxd.de>"]
readme = "README.md"
packages = [{include = "author"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.15.0"
jinja2 = "^3.1.2"
openai = "^0.28.0"
pydub = "^0.25.1"
pyyaml = "^6.0"
azure-cognitiveservices-speech = "^1.28.0"
boto3 = "^1.28.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
